# inventory-mgmt-eval

./: .cursorrules  .gitignore  Dockerfile.hud  README.md  env.py  pyproject.toml  remote_tasks.json
backend/: app.py
inventory/: __init__.py  api.py  database.py  inventory.py  members.py  seed.py
