[project]
name = "inventory-mgmt-eval"
version = "0.1.0"
description = "Inventory management workflow evaluation environment for GPT OSS 120B"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.5.35",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "inventory"]